crates/math-core/tests/snapshots/error_test__hash_outside_macro_definition.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x # y"
---
Error: Macro parameter found outside of custom command definition.
   ╭─[ <input>:1:3 ]
   │
 1 │ x # y
   │   ┬  
   │   ╰── unexpected macro parameter
───╯
